--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -1,30 +1,12 @@
-<!--<header id="inicio">
-  <div class="menu-header">
-    <img src="../../../assets/img/landing-page/AhíTeVoy-logo1-removebg-preview.png" alt="logo AhíTeVoy">
-  </div>
-  <nav>
-    <ul>
-      <li><a href="#repartidores">REPARTIDORES</a></li>
-      <li><a href="#contáctanos">CONTÁCTANOS</a></li>
-      <li><a href="#acerca-de">ACERCA DE</a></li>
-      <li><a href="#ayuda">AYUDA</a></li>
-    </ul>
-
-      <button type="button" class="btn btn-outline-primary hover-button" style="margin-right: auto !important;">Iniciar Sesión</button>
-
-  </nav>
-</header>-->
-
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <div class="nav-item" href="#"><img src="../../../assets/img/landing-page/AhíTeVoy-logo1 (1).png" width="50%"></div>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <div class="nav-item" href="#"><img src="../../../assets/img/landing-page/AhíTeVoy-logo1 (1).png" width="55%"></div>
+    <button class="navbar-toggler nav-queries" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item dropdown">
+      <ul class="navbar-nav mx-auto mb-2 mb-lg-0" id="nav-lp">
+        <li class="nav-item dropdown mx-4">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Repartidores
           </a>
@@ -34,37 +16,37 @@
             <li><a class="dropdown-item" href="#">Registrarse</a></li>
           </ul>
         </li>
-        <li class="nav-item">
+        <li class="nav-item mx-4">
           <a class="nav-link" aria-current="page" href="#">Contáctanos</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item mx-4">
           <a class="nav-link" aria-current="page" href="#">Acerca de</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item mx-4">
           <a class="nav-link" aria-current="page" href="#">Ayuda</a>
         </li>
       </ul>
-      <button class="btn btn-outline-primary hover-button-login">Iniciar Sesión</button>
+      <button class="btn btn-outline-primary hover-button-login" (click)="open(registro)">Iniciar Sesión</button>
     </div>
   </div>
 </nav>
 
 <div class="container">
   <section class="row mt-5">
-    <div class="col-xl-6 col-md-6 col-sm-6">
-      <h1 class="title my-5 m-auto">
-        !La mejor experiencia<br> en delivery!
-      </h1>
-      <p class="subtitle my-5 m-auto">
-        De manera fácil y segura, llevamos tus<br> encargos hasta la puerta de tu casa
-      </p>
-    </div>
     <div class="col-xl-6 col-md-6 col-sm-6 my-5 img-delivery-lp">
       <img src="../../../assets/img/landing-page/delivery-lp.png">
     </div>
+    <div class="col-xl-6 col-md-6 col-sm-6">
+      <h1 class="title my-5 mb-4 m-auto">
+        ¡La mejor experiencia en delivery!
+      </h1>
+      <p class="subtitle my-5 mt-4 m-auto">
+        De manera fácil y segura, llevamos tus encargos hasta la puerta de tu casa
+      </p>
+    </div>
   </section>
 
-  <section class="row mt-5">
+  <section class="row mt-4">
     <h1 class="title">
       Tenemos asombrosos servicios
     </h1>
@@ -155,8 +137,8 @@
       <h1 class="title">
         Forma parte de nuestro equipo
       </h1>
-      <div class="col-xl-6 col-md-6 col-sm-6 img-comfotable-lp">
-        <img src="../../../assets/img/landing-page/comfortable.png">
+      <div class="col-xl-6 col-md-6 col-sm-6 img-delivery-lp">
+        <img src="../../../assets/img/landing-page/comfortabled.png">
       </div>
       <div class="col-xl-6 col-md-6 col-sm-6">
         <p class="subtitle-finish" style="color: #D62828 !important;">
@@ -166,5 +148,124 @@
       </div>
     </div>
   </section>
-
 </div>
+<footer>
+  <div class="d-flex p-5">
+    <div class="col-xl-3 col-md-3 col-sm-3 col-xs-3">
+      <ul class="navbar-nav mx-auto">
+        <li class="nav-item" ><a class="col-12 text-footer" href="#">Privacidad</a></li>
+        <li class="nav-item" ><a class="col-12 text-footer" href="#">Preguntas frecuentes</a></li>
+      </ul>
+    </div>
+    <div class="col-xl-3 col-md-3 col-sm-3 col-xs-3">
+      <ul class="navbar-nav mx-auto">
+        <li class="nav-item" ><a class="col-12 text-footer" href="#">Centro de ayuda</a></li>
+        <li class="nav-item" ><a class="col-12 text-footer" href="#">Términos de uso</a></li>
+      </ul>
+    </div>
+    <div class="col-xl-3 col-md-3 col-sm-3 col-xs-3">
+      <ul class="navbar-nav mx-auto">
+        <li class="nav-item" ><a class="col-12 text-footer" href="#">Preferencias de cookies</a></li>
+        <li class="nav-item" ><a class="col-12 text-footer" href="#">Información corporativa</a></li>
+      </ul>
+    </div>
+    <div class="col-xl-3 col-md-3 col-sm-3 col-xs-3 ml-auto">
+      <div class="nav-item pl-auto" href="#"><img class="img-fluid float-right" src="../../../assets/img/landing-page/AhíTeVoy-logo1 (1).png" width="20%"></div>
+    </div>
+  </div>
+</footer>
+
+<!-- Modal de registro -->
+<ng-template #registro let-modal>
+  <div class="modal-body">
+      <div class="content-empleador">
+          <div class="row" >
+            <div class="col-10">
+              <img src="../../../assets/img/landing-page/AhíTeVoy-logo1 (1).png" class="img-100 w-5 ml-auto mr-auto">
+            </div>
+          </div>
+          <div class="row mt-1 mx-auto" style="width:50%">
+              <h1 class="mx-auto" style="margin-bottom: 0; color: #054a91;"><b>Bienvenido</b></h1><br>
+              <div class="col-12 d-flex text-align-center">
+                  <p class="mx-auto" style="margin-top: 0; color: #054a91;">Crear una cuenta </p>
+              </div>
+          </div>
+          <form [formGroup]="formularioRegistro">
+              <div class="row mt-3 ml-5" style="width: 80%;">
+                  <label for="">Correo Electrónico:</label>
+                  <input formControlName="rgCorreo" [ngClass]="{'input-error': (rgCorreo?.invalid && (rgCorreo?.dirty || rgCorreo?.touched))}" class="form-control" type="text" required>
+                  <div *ngIf="rgCorreo?.invalid && (rgCorreo?.dirty || rgCorreo?.touched)" class="error">
+                      <span *ngIf="rgCorreo?.errors?.required">Error, el campo es obligatorio</span>
+                      <span *ngIf="rgCorreo?.errors?.email">Debe ingresar un email</span>
+                  </div>
+              </div>
+              <div class="row my-2 ml-5" style="width: 80%;">
+                  <label for="">Contraseña:</label>
+                  <input formControlName="rgPassword" [ngClass]="{'input-error': (rgPassword?.invalid && (rgPassword?.dirty || rgPassword?.touched))}" class="form-control" type="password" name="">
+                  <div *ngIf="rgPassword?.invalid && (rgPassword?.dirty || rgPassword?.touched)" class="error">
+                      <span *ngIf="rgPassword?.errors?.required">Error, el campo es obligatorio</span>
+                      <span *ngIf="rgPassword?.errors?.minLength">Debe tener un mínimo de 8 caracteres</span>
+                  </div>
+              </div>
+              <div class="row my-2 ml-5" style="width: 80%;">
+                  <label for="">Confirmar Contraseña:</label>
+                  <input formControlName="rgConfPassword" class="form-control" type="password" name="">
+              </div>
+              <div class="row mx-auto mt-4 mb-3" style="width: 50%;">
+                  <button [disabled]="!formularioRegistro.valid" class="form-control btn btn-primary" type="button">Registrarme</button>
+              </div>
+          </form>
+          <div class="row ml-5" style="width: 80%;">
+              <p>¿Ya tienes cuenta?<a class="btn" style="color: #f17300;">Iniciar Sesión</a></p>
+          </div>
+      </div>
+  </div>
+</ng-template>
+
+<!--Modal del login-->
+<ng-template #login let-modal>
+  <div class="modal-body">
+      <div class="container-empleador">
+          <div class="titles-container">
+              <img class="image-login" src="../../../assets/img/landing-page/AhíTeVoy-logo1 (1).png">
+              <h1 style="font-family: 'Ramabhadra'; color:#054a91">Bienvenido</h1>
+              <h4 style="color:#054a91">Ingresa a tu cuenta</h4>
+          </div>
+          <div class="form-container">
+              <form [formGroup]="formularioLogin" class="form-container mr-5 ml-5">
+                  <div class="container-title">
+                      <div class="d-flex text-align-left">
+                          <label><span>Correo electrónico</span></label>
+                      </div>
+                      <input formControlName="lgCorreo" [ngClass]="{'input-error': (lgCorreo?.invalid && (lgCorreo?.dirty || lgCorreo?.touched))}" type="correo" class="form-control">
+                      <div *ngIf="lgCorreo?.invalid && (lgCorreo?.dirty || lgCorreo?.touched)" class="error">
+                          <span *ngIf="lgCorreo?.errors?.required">Error, el campo es obligatorio</span>
+                          <span *ngIf="lgCorreo?.errors?.email">Correo inválido</span>
+                      </div>
+                  </div>
+                  <div class="mt-4">
+                      <div class="d-flex text-align-left">
+                          <label><span>Contraseña</span></label>
+                      </div>
+                      <input formControlName="lgPassword" [ngClass]="{'input-error': (lgPassword?.invalid && (lgPassword?.dirty || lgPassword?.touched))}" type="password" class="form-control">
+                      <div *ngIf="lgPassword?.invalid && (lgPassword?.dirty || lgPassword?.touched)" class="error">
+                        <span *ngIf="lgPassword?.errors?.required">Error, el campo es obligatorio</span>
+                        <span *ngIf="lgPassword?.errors?.email">Contraseña inválida</span>
+                      </div>
+                      <div class="d-flex justify-content-end mt-1">
+                          <a href=""><span>¿Olvidaste tu contraseña?</span></a>
+                      </div>
+                  </div>
+                  <div class="mt-3">
+                      <div class="d-flex justify-content-center">
+                          <button class="btn btn-outline-secondary justify-content-center">Iniciar Sesión</button><br>
+                      </div>
+                      <div class="d-flex text-align-left mt-3 mb-2">
+                          <span>¿No tienes cuenta? <a class="register-link">Regístrate</a></span>
+                      </div>
+                  </div>
+              </form>
+          </div>
+      </div>
+  </div>
+</ng-template>
