--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -26,23 +26,26 @@
           <a class="nav-link" aria-current="page" href="#">Ayuda</a>
         </li>
       </ul>
-      <button class="btn btn-outline-primary hover-button-login" (click)="open(registro)">Iniciar Sesión</button>
+      <button class="btn btn-outline-primary hover-button-login" (click)="open(registro)">Registrarme</button>
     </div>
   </div>
 </nav>
 
 <div class="container">
-  <section class="row mt-5">
-    <div class="col-xl-6 col-md-6 col-sm-6 my-5 img-delivery-lp">
+  <section class="row mt-2">
+    <div class="col-xl-6 col-md-6 col-sm-6 col-xs-6 my-5 img-delivery-lp">
       <img src="../../../assets/img/landing-page/delivery-lp.png">
     </div>
     <div class="col-xl-6 col-md-6 col-sm-6">
-      <h1 class="title my-5 mb-4 m-auto">
+      <h1 class="title m-auto">
         ¡La mejor experiencia en delivery!
       </h1>
-      <p class="subtitle my-5 mt-4 m-auto">
-        De manera fácil y segura, llevamos tus encargos hasta la puerta de tu casa
+      <p class="subtitle mt-4 m-auto">
+        De forma rápida y segura, llevamos tus encargos hasta la puerta de tu casa
       </p>
+      <div class="d-flex justify-content-center m-4 animated-lp">
+        <button type="button" id="button-lp" class="btn btn-primary button-lp" (click)="open(login)">Reservar una entrega</button>
+      </div>
     </div>
   </section>
 
@@ -53,53 +56,53 @@
     <p class="subtitle">
       Una amplia gama de empresas de distintos rubros que ofrecen productos a tu conveniencia
     </p>
-    <div class="col-xl-4 col-md-4 col-sm-4">
+    <div class="col-xl-4 col-md-4 col-sm-4 col-xs-4 mb-3">
       <img src="../../../assets/img/landing-page/carrito-compras.jpg" width="100%">
     </div>
-    <div class="col-xl-4 col-md-4 col-sm-4">
+    <div class="col-xl-4 col-md-4 col-sm-4 col-xs-4 mb-3">
       <img src="../../../assets/img/landing-page/movil.jpg" width="100%">
     </div>
-    <div class="col-xl-4 col-md-4 col-sm-4">
+    <div class="col-xl-4 col-md-4 col-sm-4 col-xs-4 mb-3">
       <img src="../../../assets/img/landing-page/delivery-mask.jpg" width="100%">
     </div>
   </section>
 
-  <section class="row">
+  <section class="row d-flex justify-content-center">
     <h1 class="title mb-4">Conoce el trabajo que realizamos</h1>
-    <div class="card col-xl-4 col-md-4 col-sm-12 col-xs-12 mb-3 mx-2">
+    <div class="card col-xl-4 col-lg-4 col-md-4 col-sm-6 col-xs-6 mb-3 mx-2">
       <fa-icon [icon]="faShipingFast"></fa-icon>
-      <h3 class="text-card">Todo en uno</h3>
+      <h3 class="h-card">Todo en uno</h3>
       <p class="text-card">Nuestros motoristas toman la información de tus pedidos y ellos se encargan del resto.</p>
     </div>
-    <div class="card col-xl-4 col-md-4 col-sm-12 col-xs-12 mb-3 mx-2">
+    <div class="card col-xl-4 col-lg-4 col-md-4 col-sm-6 col-xs-6 mb-3 mx-2">
       <fa-icon [icon]="faMapMarkedAlt"></fa-icon>
-      <h3 class="text-card">Ubicación</h3>
+      <h3 class="h-card">Ubicación</h3>
       <p class="text-card">Puedes elegir el destino de tus encargos. ¡Te evitamos contratiempos!.</p>
     </div>
-    <div class="card col-xl-4 col-md-4 col-sm-12 col-xs-12 mb-3 mx-2">
+    <div class="card col-xl-4 col-lg-4 col-md-4 col-sm-6 col-xs-6 mb-3 mx-2">
       <fa-icon [icon]="faClipboardList"></fa-icon>
-      <h3 class="text-card">Pedidos</h3>
+      <h3 class="h-card">Pedidos</h3>
       <p class="text-card">Los gestionamos de forma inteligente para que nuestros repartidores te brinden el mejor servicio.</p>
     </div>
-    <div class="card col-xl-4 col-md-4 col-sm-12 col-xs-12 mb-3 mx-2">
+    <div class="card col-xl-4 col-lg-4 col-md-4 col-sm-6 col-xs-6 mb-3 mx-2">
       <fa-icon [icon]="faMoneyCheckAlt"></fa-icon>
-      <h3 class="text-card">Pagos en línea</h3>
+      <h3 class="h-card">Pagos en línea</h3>
       <p class="text-card">Realiza tus pagos en línea de forma rápida y segura. Tus datos son confidenciales.</p>
     </div>
-    <div class="card col-xl-4 col-md-4 col-sm-12 col-xs-12 mb-3 mx-2">
+    <div class="card col-xl-4 col-lg-4 col-md-4 col-sm-6 col-xs-6 mb-3 mx-2">
       <fa-icon [icon]="faHandshake"></fa-icon>
-      <h3 class="text-card">Socios destacados</h3>
+      <h3 class="h-card">Socios destacados</h3>
       <p class="text-card">Un catálogo de empresas de tu preferencia están a tu disposición con un solo click.</p>
     </div>
-    <div class="card col-xl-4 col-md-4 col-sm-12 col-xs-12 mb-3 mx-2">
+    <div class="card col-xl-4 col-lg-4 col-md-4 col-sm-6 col-xs-6 mb-3 mx-2">
       <fa-icon [icon]="faShoppingCart"></fa-icon>
-      <h3 class="text-card">Compras</h3>
+      <h3 class="h-card">Compras</h3>
       <p class="text-card">Llena tu carrito de compras con la cantidad de productos que desees en cualquier momento.</p>
     </div>
   </section>
 
   <section>
-    <h1 class="title mb-5">
+    <h1 class="title mb-4">
       Algunas experiencias
     </h1>
     <div class="row">
@@ -138,9 +141,9 @@
         Forma parte de nuestro equipo
       </h1>
       <div class="col-xl-6 col-md-6 col-sm-6 img-delivery-lp">
-        <img src="../../../assets/img/landing-page/comfortabled.png">
+        <img src="../../../assets/img/landing-page/delivery-run.png">
       </div>
-      <div class="col-xl-6 col-md-6 col-sm-6">
+      <div class="col-xl-6 col-md-6 col-sm-6 d-flex align-items-center">
         <p class="subtitle-finish" style="color: #D62828 !important;">
           Únete a nuestra comunidad hoy mismo para disfrutar de los beneficios y oportunidades de crecer
           que nuestros socios y equipo de trabajo te brindarán.
@@ -150,48 +153,50 @@
   </section>
 </div>
 <footer>
-  <div class="d-flex p-5">
+  <div class="d-flex pt-5 pb-1 px-2">
     <div class="col-xl-3 col-md-3 col-sm-3 col-xs-3">
       <ul class="navbar-nav mx-auto">
-        <li class="nav-item" ><a class="col-12 text-footer" href="#">Privacidad</a></li>
-        <li class="nav-item" ><a class="col-12 text-footer" href="#">Preguntas frecuentes</a></li>
+        <li class="nav-item mb-5"><a class="col-12 text-footer" href="#">Privacidad</a></li>
+        <li class="nav-item mb-5"><a class="col-12 text-footer" href="#">Preguntas frecuentes</a></li>
       </ul>
     </div>
     <div class="col-xl-3 col-md-3 col-sm-3 col-xs-3">
       <ul class="navbar-nav mx-auto">
-        <li class="nav-item" ><a class="col-12 text-footer" href="#">Centro de ayuda</a></li>
-        <li class="nav-item" ><a class="col-12 text-footer" href="#">Términos de uso</a></li>
+        <li class="nav-item mb-4"><a class="col-12 text-footer" href="#">Centro de ayuda</a></li>
+        <li class="nav-item mb-4"><a class="col-12 text-footer" href="#">Términos de uso</a></li>
       </ul>
     </div>
     <div class="col-xl-3 col-md-3 col-sm-3 col-xs-3">
       <ul class="navbar-nav mx-auto">
-        <li class="nav-item" ><a class="col-12 text-footer" href="#">Preferencias de cookies</a></li>
-        <li class="nav-item" ><a class="col-12 text-footer" href="#">Información corporativa</a></li>
+        <li class="nav-item mb-4"><a class="col-12 text-footer" href="#">Preferencias de cookies</a></li>
+        <li class="nav-item mb-4"><a class="col-12 text-footer" href="#">Información corporativa</a></li>
       </ul>
     </div>
-    <div class="col-xl-3 col-md-3 col-sm-3 col-xs-3 ml-auto">
-      <div class="nav-item pl-auto" href="#"><img class="img-fluid float-right" src="../../../assets/img/landing-page/AhíTeVoy-logo1 (1).png" width="20%"></div>
+    <div class="col-xl-3 col-md-3 col-sm-3 col-xs-3 ml-auto logo-end">
+      <div class="nav-item d-flex justify-content-center" href="#"><img class="img-fluid logo-foot" src="../../../assets/img/landing-page/AhíTeVoy-logo1 (1).png" width="30%"></div>
     </div>
   </div>
 </footer>
 
 <!-- Modal de registro -->
 <ng-template #registro let-modal>
-  <div class="modal-body">
+  <div class="modal-body" id="r-modal" style="background-color: #F7F7FF;">
       <div class="content-empleador">
           <div class="row" >
-            <div class="col-10">
-              <img src="../../../assets/img/landing-page/AhíTeVoy-logo1 (1).png" class="img-100 w-5 ml-auto mr-auto">
+            <div class="col-12 d-flex justify-content-center">
+              <img src="../../../assets/img/landing-page/AhíTeVoy-logo1 (1).png" width="25%">
             </div>
           </div>
-          <div class="row mt-1 mx-auto" style="width:50%">
-              <h1 class="mx-auto" style="margin-bottom: 0; color: #054a91;"><b>Bienvenido</b></h1><br>
+          <div class="row mt-2 mx-auto" style="width: 50%">
               <div class="col-12 d-flex text-align-center">
-                  <p class="mx-auto" style="margin-top: 0; color: #054a91;">Crear una cuenta </p>
+                  <h1 class="mx-auto" style="margin-bottom: 0; color: #003049;"><b>Bienvenido</b></h1><br>
+              </div>
+              <div class="col-12 d-flex text-align-center">
+                  <p class="mx-auto" style="margin-top: 0; color: #003049;">Crear una cuenta</p>
               </div>
           </div>
           <form [formGroup]="formularioRegistro">
-              <div class="row mt-3 ml-5" style="width: 80%;">
+              <div class="row mx-auto" id="rg-correo" style="width: 80%;">
                   <label for="">Correo Electrónico:</label>
                   <input formControlName="rgCorreo" [ngClass]="{'input-error': (rgCorreo?.invalid && (rgCorreo?.dirty || rgCorreo?.touched))}" class="form-control" type="text" required>
                   <div *ngIf="rgCorreo?.invalid && (rgCorreo?.dirty || rgCorreo?.touched)" class="error">
@@ -199,7 +204,7 @@
                       <span *ngIf="rgCorreo?.errors?.email">Debe ingresar un email</span>
                   </div>
               </div>
-              <div class="row my-2 ml-5" style="width: 80%;">
+              <div class="row mx-auto" id="rg-password" style="width: 80%;">
                   <label for="">Contraseña:</label>
                   <input formControlName="rgPassword" [ngClass]="{'input-error': (rgPassword?.invalid && (rgPassword?.dirty || rgPassword?.touched))}" class="form-control" type="password" name="">
                   <div *ngIf="rgPassword?.invalid && (rgPassword?.dirty || rgPassword?.touched)" class="error">
@@ -207,16 +212,17 @@
                       <span *ngIf="rgPassword?.errors?.minLength">Debe tener un mínimo de 8 caracteres</span>
                   </div>
               </div>
-              <div class="row my-2 ml-5" style="width: 80%;">
+              <div class="row mx-auto" id="rg-conf-password" style="width: 80%;">
                   <label for="">Confirmar Contraseña:</label>
                   <input formControlName="rgConfPassword" class="form-control" type="password" name="">
               </div>
-              <div class="row mx-auto mt-4 mb-3" style="width: 50%;">
-                  <button [disabled]="!formularioRegistro.valid" class="form-control btn btn-primary" type="button">Registrarme</button>
+              <div class="row mx-auto mt-4 mb-3" id="register" style="width: 50%;">
+                  <button [disabled]="!formularioRegistro.valid" class="form-control btn btn-primary hover-button-login" type="button">Registrarme</button>
               </div>
           </form>
-          <div class="row ml-5" style="width: 80%;">
-              <p>¿Ya tienes cuenta?<a class="btn" style="color: #f17300;">Iniciar Sesión</a></p>
+          <div class="row mx-auto d-flex justify-content-center align-items-center" id="r-login" style="width: 100%;">
+              <p class="col-6 m-0">¿Ya tienes cuenta?</p>
+              <a class="btn col-6 m-0" style="color: #F77F00;">Iniciar Sesión</a>
           </div>
       </div>
   </div>
@@ -224,47 +230,50 @@
 
 <!--Modal del login-->
 <ng-template #login let-modal>
-  <div class="modal-body">
+  <div class="modal-body" id="l-modal" style="background-color: #F7F7FF;">
       <div class="container-empleador">
-          <div class="titles-container">
-              <img class="image-login" src="../../../assets/img/landing-page/AhíTeVoy-logo1 (1).png">
-              <h1 style="font-family: 'Ramabhadra'; color:#054a91">Bienvenido</h1>
-              <h4 style="color:#054a91">Ingresa a tu cuenta</h4>
+          <div class="row">
+              <div class="col-12 d-flex justify-content-center">
+                <img class="image-login" src="../../../assets/img/landing-page/AhíTeVoy-logo1 (1).png" width="25%">
+              </div>
+              <div class="row mt-2 mx-auto" style="width: 60%">
+                <div class="col-12 d-flex text-align-center">
+                    <h1 class="mx-auto" style="margin-bottom: 0; color: #003049;"><b>Bienvenido</b></h1><br>
+                </div>
+                <div class="col-12 d-flex text-align-center">
+                    <p class="mx-auto" style="margin-top: 0; color: #003049;">Ingresa a tu cuenta</p>
+                </div>
+              </div>
           </div>
-          <div class="form-container">
-              <form [formGroup]="formularioLogin" class="form-container mr-5 ml-5">
-                  <div class="container-title">
-                      <div class="d-flex text-align-left">
-                          <label><span>Correo electrónico</span></label>
-                      </div>
-                      <input formControlName="lgCorreo" [ngClass]="{'input-error': (lgCorreo?.invalid && (lgCorreo?.dirty || lgCorreo?.touched))}" type="correo" class="form-control">
-                      <div *ngIf="lgCorreo?.invalid && (lgCorreo?.dirty || lgCorreo?.touched)" class="error">
-                          <span *ngIf="lgCorreo?.errors?.required">Error, el campo es obligatorio</span>
-                          <span *ngIf="lgCorreo?.errors?.email">Correo inválido</span>
-                      </div>
+          <form [formGroup]="formularioLogin">
+              <div class="row mx-auto" id="lg-correo" style="width: 80%;">
+                  <label for="">Correo Electrónico:</label>
+                  <input formControlName="lgCorreo" [ngClass]="{'input-error': (lgCorreo?.invalid && (lgCorreo?.dirty || lgCorreo?.touched))}" type="correo" class="form-control">
+                  <div *ngIf="lgCorreo?.invalid && (lgCorreo?.dirty || lgCorreo?.touched)" class="error">
+                      <span *ngIf="lgCorreo?.errors?.required">Error, el campo es obligatorio</span>
+                      <span *ngIf="lgCorreo?.errors?.email">Correo inválido</span>
                   </div>
-                  <div class="mt-4">
-                      <div class="d-flex text-align-left">
-                          <label><span>Contraseña</span></label>
-                      </div>
-                      <input formControlName="lgPassword" [ngClass]="{'input-error': (lgPassword?.invalid && (lgPassword?.dirty || lgPassword?.touched))}" type="password" class="form-control">
-                      <div *ngIf="lgPassword?.invalid && (lgPassword?.dirty || lgPassword?.touched)" class="error">
-                        <span *ngIf="lgPassword?.errors?.required">Error, el campo es obligatorio</span>
-                        <span *ngIf="lgPassword?.errors?.email">Contraseña inválida</span>
-                      </div>
-                      <div class="d-flex justify-content-end mt-1">
-                          <a href=""><span>¿Olvidaste tu contraseña?</span></a>
-                      </div>
+              </div>
+              <div class="row mx-auto" id="lg-password" style="width: 80%;">
+                  <label for="">Contraseña:</label>
+                  <input formControlName="lgPassword" [ngClass]="{'input-error': (lgPassword?.invalid && (lgPassword?.dirty || lgPassword?.touched))}" type="password" class="form-control">
+                  <div *ngIf="lgPassword?.invalid && (lgPassword?.dirty || lgPassword?.touched)" class="error">
+                    <span *ngIf="lgPassword?.errors?.required">Error, el campo es obligatorio</span>
+                    <span *ngIf="lgPassword?.errors?.email">Contraseña inválida</span>
                   </div>
-                  <div class="mt-3">
-                      <div class="d-flex justify-content-center">
-                          <button class="btn btn-outline-secondary justify-content-center">Iniciar Sesión</button><br>
-                      </div>
-                      <div class="d-flex text-align-left mt-3 mb-2">
-                          <span>¿No tienes cuenta? <a class="register-link">Regístrate</a></span>
-                      </div>
+                  <div class="d-flex justify-content-center mt-2">
+                      <a href="" style="color: #003049;"><span>¿Olvidaste tu contraseña?</span></a>
                   </div>
-              </form>
+              </div>
+              <div class="mt-3">
+                  <div class="d-flex justify-content-center">
+                      <button class="btn btn-outline-primary hover-button-login">Iniciar Sesión</button><br>
+                  </div>
+              </div>
+          </form>
+          <div class="row mx-auto d-flex justify-content-center align-items-center" id="r-login" style="width: 100%;">
+            <p class="col-7 m-0">¿No tienes cuenta?</p>
+            <a class="btn col-5 m-0" style="color: #F77F00;">Regístrate</a>
           </div>
       </div>
   </div>
