--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -26,7 +26,9 @@
           <a class="nav-link" aria-current="page" href="#">Ayuda</a>
         </li>
       </ul>
-      <button class="btn btn-outline-primary hover-button-login" (click)="open(registro)">Registrarme</button>
+      <div class="d-flex justify-content-center">
+        <button class="btn btn-outline-primary hover-button-login" (click)="open(registro)">Registrarme</button>
+      </div>
     </div>
   </div>
 </nav>
@@ -222,7 +224,7 @@
           </form>
           <div class="row mx-auto d-flex justify-content-center align-items-center" id="r-login" style="width: 100%;">
               <p class="col-6 m-0">¿Ya tienes cuenta?</p>
-              <a class="btn col-6 m-0" style="color: #F77F00;">Iniciar Sesión</a>
+              <a class="btn col-6 m-0" style="color: #F77F00;" (click)="open(login)" (click)="modal.close(registro)">Iniciar Sesión</a>
           </div>
       </div>
   </div>
@@ -273,7 +275,7 @@
           </form>
           <div class="row mx-auto d-flex justify-content-center align-items-center" id="r-login" style="width: 100%;">
             <p class="col-7 m-0">¿No tienes cuenta?</p>
-            <a class="btn col-5 m-0" style="color: #F77F00;">Regístrate</a>
+            <a class="btn col-5 m-0" style="color: #F77F00;" (click)="open(registro)" (click)="modal.close(login)">Regístrate</a>
           </div>
       </div>
   </div>
