[ADD] registro de clientes funcional, login y revalidación de token en proceso

--- a/src/app/client/home/home.component.html
+++ b/src/app/client/home/home.component.html
@@ -1,4 +1,8 @@
 <app-navbar-mobile class="n-mobile"></app-navbar-mobile>
 <app-navbar-desktop class="n-desktop"></app-navbar-desktop>
 
+<div class="title mt-2">
+  <h2 class="text-center">Hacemos lo mejor para ti. Dinos, ¿qué buscas?</h2>
+</div>
+
 <router-outlet></router-outlet>
