--- a/src/app/client/navbar-mobile/navbar-mobile.component.html
+++ b/src/app/client/navbar-mobile/navbar-mobile.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light n">
   <div class="container-fluid">
     <div class="d-flex justify-content-center px-3" id="">
       <fa-icon [icon]="faBars" class="fa-icon"></fa-icon>
