[ADD] categories.service, redirect to Motorista from landing page

--- a/src/app/client/navbar-desktop/navbar-desktop.component.html
+++ b/src/app/client/navbar-desktop/navbar-desktop.component.html
@@ -17,7 +17,7 @@
     <ul class="navbar-nav px-2">
       <li class="nav-item img-profile d-flex align-items-center justify-content-center">
         <!--<div class="mx-2" style="background: url('../../../assets/img/home/profile-icon.png'); width: 40px; height: 40px; background-size: cover;"></div>-->
-        <img class="f-perfil" src="../../../assets/img/home/profile-icon.png" width="45" alt="">
+        <img class="f-perfil" src="../../../assets/img/home/gohan.jpg" width="45" alt="">
       </li>
     </ul>
   </div>
