--- a/src/app/client/home/home.component.html
+++ b/src/app/client/home/home.component.html
@@ -1,8 +1,23 @@
 <app-navbar-mobile class="n-mobile"></app-navbar-mobile>
 <app-navbar-desktop class="n-desktop"></app-navbar-desktop>
 
-<div class="title mt-2">
+<div class="container py-4">
   <h2 class="text-center">Hacemos lo mejor para ti. Dinos, ¿qué buscas?</h2>
 </div>
+
+<div class="container">
+  <div class="row">
+      <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4 col-6 mb-4" id="c-{{i}}" *ngFor="let categoria of categorias, let i = index">
+        <div class="card d-flex justify-content-center" style="background-color: #9DD9D2;">
+          <div class="d-flex justify-content-center">
+            <img class="p-3 pb-3 w-50" src="http://localhost:3000/{{categoria.imagen}}">
+          </div>
+          <!--<p class="ml-3">Comercios</p>-->
+        </div>
+        <h6 class="text-center pt-1">{{ categoria.nombre }}</h6>
+      </div>
+  </div>
+</div>
+
 
 <router-outlet></router-outlet>
