--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -5,24 +5,24 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mx-auto mb-2 mb-lg-0" id="nav-lp">
+      <ul class="navbar-nav mb-2 mb-lg-0" id="nav-lp">
         <li class="nav-item dropdown mx-4">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle text-center" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Repartidores
           </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Iniciar Sesión</a></li>
+          <ul class="dropdown-menu w-25 mx-auto" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="http://localhost:4201/page/login">Iniciar Sesión</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Registrarse</a></li>
+            <li><a class="dropdown-item" href="http://localhost:4201/page/sign-up">Registrarse</a></li>
           </ul>
         </li>
-        <li class="nav-item mx-4">
+        <li class="nav-item mx-4 d-flex justify-content-center">
           <a class="nav-link" aria-current="page" href="#">Contáctanos</a>
         </li>
-        <li class="nav-item mx-4">
+        <li class="nav-item mx-4 d-flex justify-content-center">
           <a class="nav-link" aria-current="page" href="#">Acerca de</a>
         </li>
-        <li class="nav-item mx-4">
+        <li class="nav-item mx-4 d-flex justify-content-center">
           <a class="nav-link" aria-current="page" href="#">Ayuda</a>
         </li>
       </ul>
