--- a/src/app/client/navbar-mobile/navbar-mobile.component.css
+++ b/src/app/client/navbar-mobile/navbar-mobile.component.css
@@ -31,6 +31,26 @@
   border-radius: 15px;
 }
 
+.img-profile {
+  border-color: black !important;
+  border-radius: 50% !important;
+  width: 45px;
+  height: 45px;
+  margin-top: auto;
+  margin-bottom: auto;
+  right: 10px !important;
+}
+
+.f-perfil {
+  background-size: auto;
+  border-radius: 50%;
+  margin: 0;
+}
+
+.text-color {
+  color: #f5f6f7;
+}
+
 #nav-home {
   padding-left: auto;
   padding-right: auto;
