[UPDATE] navegacion e interaccion entre componentes, logout finalizado, arreglos varios

--- a/src/app/client/navbar-desktop/navbar-desktop.component.css
+++ b/src/app/client/navbar-desktop/navbar-desktop.component.css
@@ -43,3 +43,27 @@
 .n {
   background-color: #F7F7FF !important;
 }
+
+.text-color {
+  color: #f5f6f7;
+}
+
+.text-color-min {
+  color: #f5f6f7;
+  font-size: .75rem;
+}
+
+.fa-icon-option {
+  color: #003049;
+  font-size: 20px;
+  margin: auto auto;
+  opacity: 0.7;
+}
+
+.settings {
+  z-index: 1;
+  position: absolute;
+  right: 20px;
+  width: 25vw;
+  border-radius: 20px !important;
+}
