--- a/src/app/client/home/home.component.html
+++ b/src/app/client/home/home.component.html
@@ -1,7 +1,12 @@
-<app-navbar-mobile class="n-mobile"></app-navbar-mobile>
-<app-navbar-desktop class="n-desktop"></app-navbar-desktop>
+<app-navbar-mobile class="n-mobile" (click)="show()" 
+  (onNewComponente)="controlarCategoria($event)">
+</app-navbar-mobile>
+<app-navbar-desktop class="n-desktop"
+  (onNewSettings)="controlarCategoria($event)">
+</app-navbar-desktop>
 
-<div class="container" *ngIf="mostrarCategorias">
+
+<div class="container" *ngIf="mostrarCategorias && active">
   <div class="row py-4 m-0">
     <h2 class="text-center">Hacemos lo mejor para ti. Dinos, ¿qué buscas?</h2>
   </div>
@@ -19,7 +24,7 @@
   </div>
 </div>
 
-<div class="container" *ngIf="mostrarEmpresas">
+<div class="container" *ngIf="mostrarEmpresas && active">
   <div class="row py-4 m-0">
     <h2 class="" (click)="showCategorias()">{{categoriaActual}}</h2>
     <hr>
@@ -46,12 +51,12 @@
   </div>
 </div>
 
-<div class="container" *ngIf="mostrarProductos">
+<div class="container" *ngIf="mostrarProductos && active">
   <div class="row py-4 m-0">
     <h2 class="" (click)="mostrarProductos = false; mostrarEmpresas = true;">{{empresaActual}}</h2>
     <hr>
     <div class="" *ngIf="empresas.length == 0">
-      {{noHayEmpresas}}
+      {{noHayProductos}}
     </div>
     <div class="row">
       <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4 col-6 mb-4" *ngFor="let producto of productos, let i = index">
@@ -68,4 +73,5 @@
     </div>
   </div>
 </div>
+
 <!--<router-outlet></router-outlet>-->
