--- a/src/app/client/navbar-desktop/navbar-desktop.component.html
+++ b/src/app/client/navbar-desktop/navbar-desktop.component.html
@@ -15,10 +15,84 @@
       </li>
     </ul>
     <ul class="navbar-nav px-2">
-      <li class="nav-item img-profile d-flex align-items-center justify-content-center">
+      <li class="nav-item img-profile d-flex align-items-center justify-content-center" (click)="showSettings()">
         <!--<div class="mx-2" style="background: url('../../../assets/img/home/profile-icon.png'); width: 40px; height: 40px; background-size: cover;"></div>-->
         <img class="f-perfil" src="../../../assets/img/home/gohan.jpg" width="45" alt="">
       </li>
     </ul>
   </div>
 </nav>
+
+<div class="card settings" *ngIf="mostrarSettings">
+  <div class="row">
+    <div style="background-color: #FCBF49;">
+
+        <div class="row px-2 d-flex justify-content-center pt-2 pb-1">
+          <div class="col-3 d-flex align-items-center">
+            <div class="img-profile">
+              <img class="f-perfil" src="../../../assets/img/home/gohan.jpg" width="35" alt="">
+            </div>
+            <!--<div class="mx-2" style="background: url('../../../assets/img/home/profile-icon.png'); width: 40px; height: 40px; background-size: cover;"></div>-->
+          </div>
+          <div class="col-9">
+            <p class="my-0 text-color">Goku</p>
+            <p class="my-0 text-color-min">correo@gmail.com</p>
+          </div>
+        </div>
+
+        <div class="row px-1 my-2" (click)="show()" (click)="showHome()" routerLink="home">
+          <div class="row">
+            <div class="col-2"><fa-icon [icon]="faHome" class="fa-icon-option"></fa-icon></div>
+            <div class="col-10 d-flex justify-content-left align-items-center"><h6 class="px-2 mb-0 d-flex align-items-center text-color">Home</h6></div>
+          </div>
+        </div>
+    
+        <div class="row px-1 my-2" (click)="show()" (click)="showEditarPerfil()" routerLink="editar">
+          <div class="row">
+            <div class="col-2"><fa-icon [icon]="faUserEdit" class="fa-icon-option"></fa-icon></div>
+            <div class="col-10 d-flex justify-content-left align-items-center"><h6 class="px-2 mb-0 d-flex align-items-center text-color">Editar Perfil</h6></div>
+          </div>
+        </div>
+    
+        <div class="row px-1 my-2" (click)="show()" (click)="showPedidoActual()" routerLink="pedido">
+          <div class="row">
+            <div class="col-2"><fa-icon [icon]="faBox" class="fa-icon-option"></fa-icon></div>
+            <div class="col-10 d-flex justify-content-left align-items-center"><h6 class="px-2 mb-0 d-flex align-items-center text-color">Mi pedido</h6></div>
+          </div>
+        </div>
+    
+        <div class="row px-1 my-2" (click)="show()" (click)="showHistorialPedidos()" routerLink="historial">
+          <div class="row">
+            <div class="col-2"><fa-icon [icon]="faClipboardList" class="fa-icon-option"></fa-icon></div>
+            <div class="col-10 d-flex justify-content-left align-items-center"><h6 class="px-2 mb-0 d-flex align-items-center text-color">Historial de pedidos</h6></div>
+          </div>
+        </div>    
+    
+        <div class="row px-1 my-2" (click)="logout()" (click)="show()">
+          <div class="row">
+            <div class="col-2"><fa-icon [icon]="faSignOutAlt" class="fa-icon-option"></fa-icon></div>
+            <div class="col-10 d-flex justify-content-left align-items-center">
+              <h6 class="px-2 mb-0 d-flex align-items-center text-color">Cerrar Sesión</h6>
+            </div>
+          </div>
+        </div>
+
+    </div>
+  </div>
+</div>
+
+<div *ngIf="mostrarEditarPerfil">
+  <app-editar-perfil></app-editar-perfil>
+</div>
+
+<div *ngIf="mostrarPedidoActual">
+  <app-pedido-actual></app-pedido-actual>
+</div>
+
+<div *ngIf="mostrarHistorialPedidos">
+  <app-historial-pedidos></app-historial-pedidos>
+</div>
+
+<!--<div *ngIf="mostrarHome">
+  <app-ayuda></app-ayuda>
+</div>-->
