--- a/src/app/client/navbar-mobile/navbar-mobile.component.html
+++ b/src/app/client/navbar-mobile/navbar-mobile.component.html
@@ -12,7 +12,7 @@
   </div>
 </nav>
 
-<div *ngIf="mostrar" style="background-color: #FCBF49; width: 100vw; height: 100vh;">
+<div *ngIf="mostrar" style="background-color: #FCBF49; width: 100vw; height: 100vh; position: fixed; z-index: 2;">
   <div class="container-fluid">
     <div class="p-3" id="" (click)="show()" >
       <fa-icon [icon]="faTimes" class="fa-icon-hidden"></fa-icon>
@@ -37,6 +37,12 @@
         <input class="form-control input-padding" type="text" placeholder="Buscar...">
       </div>
     </div>-->
+    <div class="container mt-4" (click)="show()" (click)="showHome()" routerLink="home">
+      <div class="row">
+        <div class="col-2"><fa-icon [icon]="faHome" class="fa-icon-option"></fa-icon></div>
+        <div class="col-10 d-flex justify-content-left align-items-center"><h4 class="px-2 mb-0 d-flex align-items-center text-color">Home</h4></div>
+      </div>
+    </div>
 
     <div class="container mt-4" (click)="show()" (click)="showEditarPerfil()" routerLink="editar">
       <div class="row">
@@ -59,17 +65,13 @@
       </div>
     </div>
 
-    <div class="container mt-4" (click)="show()" (click)="showAyuda()" routerLink="ayuda">
-      <div class="row">
-        <div class="col-2"><fa-icon [icon]="faQuestionCircle" class="fa-icon-option"></fa-icon></div>
-        <div class="col-10 d-flex justify-content-left align-items-center"><h4 class="px-2 mb-0 d-flex align-items-center text-color">Ayuda</h4></div>
-      </div>
-    </div>
 
-    <div class="container mt-4">
+    <div class="container mt-4" (click)="logout()" (click)="show()">
       <div class="row">
         <div class="col-2"><fa-icon [icon]="faSignOutAlt" class="fa-icon-option"></fa-icon></div>
-        <div class="col-10 d-flex justify-content-left align-items-center"><h4 class="px-2 mb-0 d-flex align-items-center text-color">Cerrar Sesión</h4></div>
+        <div class="col-10 d-flex justify-content-left align-items-center">
+          <h4 class="px-2 mb-0 d-flex align-items-center text-color">Cerrar Sesión</h4>
+        </div>
       </div>
     </div>
   </div>
